# xde.app

./: .gitignore  README.md  XDE.sln
Xde.Specs/: Program.cs
crates/: Cargo.toml
crates/team-specs/src/: main.rs
docker/: docker-compose.yml
labs/cs/: XDE.sln
labs/cs/Xde.Meta/: AssemblyInfo.cs  Xde.Meta.csproj
labs/cs/Xde.Ops/: Xde.Ops.csproj
labs/cs/Xde.Specs/: NamespaceDoc.cs  Program.cs  TempGenerated.cs  Xde.Specs.csproj
labs/dotnet/: .gitignore  XDE.sln
labs/dotnet/Xde.Meta/: Xde.Meta.csproj
labs/dotnet/Xde.Ops/: AssemblyInfo.cs  TempGenerator.cs
labs/dotnet/Xde.Specs.CSharp/: MetaShared.cs  NamespaceDoc.cs  Program.cs  Xde.Specs.CSharp.csproj
labs/dotnet/Xde.Specs.FSharp/: Program.fs  Xde.Specs.FSharp.fsproj
labs/fs/: XDE.sln
labs/pg/: 0.00.0001.sql  README.md  clean.sql  deploy-simple.sql  deploy.ps1  deploy.sql  publish.fsx  security.sql
labs/pg/env/: schema.sql
labs/pg/mesh/: schema.sql
labs/pg/mess/: log.sql  mess_anki_list.sql  mess_balance_list.sql  mess_credit_approve.sql  mess_deadline_list.sql  mess_depends_list.sql  mess_drink_goals.sql  mess_dump_from.sql  mess_fts.sql  (+17 more)
labs/rust/crates/sandbox-cli/: Cargo.toml
labs/rust/crates/sandbox-cli/src/: main.rs
ops/: docker-compose.yml
ops/controller/: Dockerfile
ops/postgres/: dump.ps1  pg_dump.cmd
src/: .gitignore  XDE.sln
src/Xde.Specs/: Xde.Specs.csproj
src/Xde.Specs.CSharp/: MetaShared.cs  Program.cs  Xde.Specs.CSharp.csproj
src/app-specs/: Cargo.toml
src/dotnet/: XDE.sln
src/pg/: deploy-simple.sql  deploy.ps1  security.sql
src/team-specs/: Cargo.toml
(+304 files in other folders)
